gap fix

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -120,12 +120,13 @@ section {
 .sticky-header {
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: -1;
     left: 0;
     padding-left: 0;
     margin: 0 0;
     z-index: 50;
     color: #f4f4f4;
+    box-shadow: 0px 0px 40px rgba(17, 17, 17, 1);
 }
 
 .tweet-button {
